...
  TextInput,
  RadioButton,
  Subheading,
  Button,
} from "react-native-paper";
import {useRealm} from "../../realm";
import {Category} from "../../realm/Category";
import {NativeStackScreenProps} from "@react-navigation/native-stack";
import {StackParamList} from "../../navigators/StackNavigators";

import ColorChoice from "../../components/ColorChoice";

type Props = NativeStackScreenProps<StackParamList, "AddCategoryScreen">;
...
      {/* <ScrollView horizontal={true}>
        {COLOR_OPTIONS.map(col => (
          
        ))}
      </ScrollView> */}
      <Button onPress={() => addNewCategory(title, type, color)}>
        Add Category
      </Button>
    </View>
  );
};

export default AddCategory;
...
