export const Dcategories = [
  {
    title: "Travel",
    type: "expense",
  },
  {
    title: "Salary",
    type: "income",
  },
  {
    title: "Trading",
    type: "expense",
  },
  {
    title: "Food",
    type: "expense",
  },
  {
    title: "Sale",
    type: "income",
  },
  {
    title: "Clothing",
    type: "expense",
  },
  {
    title: "Online Subscription",
    type: "expense",
  },
  {
    title: "Mobile Recharge",
    type: "expense",
  },
];

export const DefaultCategories = [
{
  title: "Travel",
  type: "expense",
  icon: "travel",
  },
  {
    title: "Salary",
    type: "income",
  icon: "salary",

  },
  {
    title: "Food",
    type: "expense",
  icon: "food",

  },
  {
    title: "Shopping",
    type: "expense",
  icon: "shopping",

  },
]