...

  const renderBackdrop = useCallback((props) => <BottomSheetBackdrop {...props} disappearsOnIndex={-1} />, []);
  return (
    <>
      <CollapsibleHeaderScrollView
        contentContainerStyle={{ paddingHorizontal: 16, paddingBottom: 84 }}
        title="Settings"
        paddingTop={0}
        hideBackButton={true}
        style={{ backgroundColor: colors.screen }}
      >
        <View style={[styles.section, { backgroundColor: colors.sectionBackground }]}>
          <Text style={textStyle.title}>Appearance</Text>
...
            title={t("confirmDeleteTitle")}
          /> */}
          {__DEV__ && <SettingItem label={t("deleteAllData")} leftIcon="trash" onPress={() => setDeleteModal(true)} />}
        </View>

        <View style={[styles.section, { backgroundColor: colors.sectionBackground }]}>
          <Text style={textStyle.title}>About</Text>

          <SettingItem label={t("help")} leftIcon="info" onPress={() => router.push("settings/help")} />

          <SettingItem label={t("about")} leftIcon="smiley" onPress={() => router.push("settings/about")} />

          <SettingItem label={t("appVersion")} leftIcon="ellipsis" onPress={() => setDeleteModal(true)}>
...
