appId: com.tusharyaar.moneybracket
name: Test to Delete All Data
---
- launchApp
- tapOn:
     id: tab-settings
- assertVisible: Settings
- scrollUntilVisible:
    element:
      id: delete-all-data
    direction: DOWN
- tapOn:
     id: delete-all-data
- assertVisible:
            id: delete-container-confirm-btn
- tapOn:
      id: delete-container-confirm-btn

# TODO: Add Check